# MIOS

./: .env.example  .gitignore  README.md  pyproject.toml
Documents/: MIOS_Risk_Register.xlsx
agents/: prompts.py  signal_analyst.py
config/: settings.py  watchlist.json
data/: synthetic_postings.jsonl
delivery/: digest.py  slack.py
demo/: README.md
docs/: generate_run_guide.py
evaluation/: kpi_harness.py
loader/: ingest.py  schema.sql
pipeline/: live.py
scraper/: pngworkforce.py
tests/: test_digest.py  test_loader.py  test_pipeline_live.py  test_scraper.py  test_signal_analyst.py
tests/fixtures/: pngworkforce_listing.html  pngworkforce_real_listing.html
